redirect a pagina de admin

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
             client-id: client-app
             client-secret: 12345.medina#
             authorization-grant-type: authorization_code
-            redirect-uri: "http://127.0.0.1:8080/authorized"
+            redirect-uri: "http://127.0.0.1:8080/admin"
             scope:
               - openid
               - profile
